Modified: wflow-install - Startup Script - Added commented JAVA_OPTS (--add-modules java.se.ee) for java 9. @6.0-SNAPSHOT